# jnp-7

./: CMakeLists.txt  example.cc  functional.cc  functional.h  images.cc  images.h  images_tresc.txt
